# agent-sash

./: .gitignore  CLAUDE.md  README.md  agent_sash.toml  pyproject.toml
src/agent_sash/: __init__.py  __main__.py  backend.py  cli.py  config.py  hook.py
tests/: test_config.py  test_e2e.py  test_hook_unit.py
